Fix cust. sat. font on small screens
Fix the font size of the previous month number on the customer
satisfaction module so that it stays proportional to the main percentage
number on screens below 640px.

--- a/app/assets/stylesheets/vehicle-licensing.scss
+++ b/app/assets/stylesheets/vehicle-licensing.scss
@@ -45,7 +45,6 @@
     position: absolute;
     bottom: 0;
     left: 16em;
-
   }
 
   .change {
@@ -58,7 +57,8 @@
     }
     .previous-month {
       left: 11em;
-      .impact-number {
+
+      .change {
         @include core-19($tabular-numbers: true);
       }
     }
@@ -71,8 +71,15 @@
       // for small screens.
       @include bold-80($tabular-numbers: true);
     }
-    .previous-month p {
-      margin-bottom: 0;
+
+    .previous-month {
+      p {
+        margin-bottom: 0;
+      }
+
+      .change {
+        @include core-24($tabular-numbers: true);
+      }
     }
   }
 
